# phosg

./: .gitignore  CMakeLists.txt  Concurrency.cc  Concurrency.hh  ConsistentHashRing.cc  ConsistentHashRing.hh  ConsistentHashRingTest.cc  Encoding.cc  Encoding.hh  EncodingTest.cc  FileCache.cc  FileCache.hh  FileCacheTest.cc  Filesystem.cc  Filesystem.hh  FilesystemTest.cc  Hash.cc  Hash.hh  HashTest.cc  Image.cc  Image.hh  ImageTest.cc  ImageTestReference16.ppm  ImageTestReference32.ppm  ImageTestReference8.ppm  JSON.cc  JSON.hh  JSONFormat.cc  JSONPickle.cc  JSONPickle.hh  JSONPickleTest.cc  JSONTest.cc  KDTree-inl.hh  KDTree.hh  KDTreeTest.cc  LRUSet-inl.hh  LRUSet.hh  LRUSetTest.cc  Makefile  Network.cc  (+20 more)
.github/workflows/: cmake.yml
reference/: ImageTestReference.alpha.16.ppm  ImageTestReference.alpha.32.ppm  ImageTestReference.alpha.64.ppm  ImageTestReference.alpha.ppm  ImageTestReference.argb1555.ppm  ImageTestReference.argb8888.ppm  ImageTestReference.g1.colorized.ppm  ImageTestReference.g1.ppm  ImageTestReference.g8.ppm  ImageTestReference.ga11.ppm  ImageTestReference.ga88.ppm  ImageTestReference.rgb565.ppm  ImageTestReference.rgb888.ppm  ImageTestReference.rgba8888.ppm  ImageTestReference.xrgb1555.ppm  ImageTestReference64.ppm
src/: Arguments.cc  Arguments.hh  ArgumentsTest.cc  BinDiff.cc  Concurrency.cc  ConsistentHashRing.cc  ConsistentHashRingTest.cc  Containers.hh  Encoding.cc  Encoding.hh  EncodingTest.cc  FileCache.cc  FileCacheTest.cc  Filesystem-Unix.cc  Filesystem-Unix.hh  Filesystem.cc  Filesystem.hh  FilesystemTest.cc  Hash.cc  Hash.hh  HashTest.cc  Image.cc  Image.hh  ImageTest.cc  ImageTextFont.hh  JSON.cc  JSON.hh  JSONFormat.cc  JSONTest.cc  KDTree-inl.hh  KDTree.hh  KDTreeTest.cc  LICENSE  LRUMap.hh  LRUMapTest.cc  LRUSet-inl.hh  LRUSet.hh  LRUSetTest.cc  Math.hh  MathTest.cc  (+25 more)
